# simple-mail

./: readme.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/pavelavl/simple_mail/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.c  makefile  native-lib.cpp  pop3.c  server  smtp.c  utils.c
app/src/main/cpp/include/: pop3.h  smtp.h  utils.h
app/src/main/java/com/pavelavl/simple_mail/: MainActivity.kt
app/src/main/java/com/pavelavl/simple_mail/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/pavelavl/simple_mail/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
